[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = {version = "1.0.152", features = ["derive"] }
derive_builder = "0.11"
ndarray = "0.15.0"
anyhow = "1.0"
polars = "0.26.1"
array2d = "0.3.0"
lettre = "0.10"
lettre_email = "0.9"
mime = "0.3.13"
scraper = "0.12.0"
job_scheduler = "1.2.1"
once_cell = "1.17.1"
rand = "0.8.5"
futures = "0.3.26"
binance = "0.20.2"
hex = "0.4"
hmac = "0.12.1"
sha2 = "0.10.6"
error-chain = "0.12.4"
chrono = "0.4.23"
rust_decimal = "1.29"
salvo = {version = "0.66", features=["cors"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }